PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) int __stdcall DPLAddStandardFont(int instanceID, int StandardFontID);
__declspec(dllimport) int __stdcall DPLAddSubsettedFont(int instanceID, wchar_t * FontName, int CharsetIndex, wchar_t * SubsetChars);
__declspec(dllimport) int __stdcall DPLAddSubsettedFontA(int instanceID, char * FontName, int CharsetIndex, char * SubsetChars);
__declspec(dllimport) int __stdcall DPLAddTextMarkupAnnotation(int instanceID, int MarkupType, double Left, double Top, double Width, double Height);
__declspec(dllimport) int __stdcall DPLAddToBuffer(int instanceID, char * Buffer, char * Source, int SourceLength);
__declspec(dllimport) int __stdcall DPLAddToFileList(int instanceID, wchar_t * ListName, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLAddToFileListA(int instanceID, char * ListName, char * FileName);
__declspec(dllimport) int __stdcall DPLAddTrueTypeFont(int instanceID, wchar_t * FontName, int Embed);
__declspec(dllimport) int __stdcall DPLAddTrueTypeFontA(int instanceID, char * FontName, int Embed);
__declspec(dllimport) int __stdcall DPLAddTrueTypeFontFromFile(int instanceID, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLAddTrueTypeFontFromFileA(int instanceID, char * FileName);
__declspec(dllimport) int __stdcall DPLAddTrueTypeSubsettedFont(int instanceID, wchar_t * FontName, wchar_t * SubsetChars, int Options);
__declspec(dllimport) int __stdcall DPLAddTrueTypeSubsettedFontA(int instanceID, char * FontName, char * SubsetChars, int Options);
__declspec(dllimport) int __stdcall DPLAddType1Font(int instanceID, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLAddType1FontA(int instanceID, char * FileName);
__declspec(dllimport) int __stdcall DPLAddU3DAnnotationFromFile(int instanceID, double Left, double Top, double Width, double Height, wchar_t * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAddU3DAnnotationFromFileA(int instanceID, double Left, double Top, double Width, double Height, char * FileName, int Options);
__declspec(dllimport) int __stdcall DPLAnalyseFile(int instanceID, wchar_t * InputFileName, wchar_t * Password);
__declspec(dllimport) int __stdcall DPLAnalyseFileA(int instanceID, char * InputFileName, char * Password);
__declspec(dllimport) int __stdcall DPLAnnotationCount(int instanceID);
__declspec(dllimport) int __stdcall DPLAnsiStringResultLength(int instanceID);
__declspec(dllimport) int __stdcall DPLAppendSpace(int instanceID, double RelativeSpace);
__declspec(dllimport) int __stdcall DPLAppendTableColumns(int instanceID, int TableID, int NewColumnCount);
__declspec(dllimport) int __stdcall DPLAppendTableRows(int instanceID, int TableID, int NewRowCount);
__declspec(dllimport) int __stdcall DPLAppendText(int instanceID, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLAppendTextA(int instanceID, char * Text);
__declspec(dllimport) int __stdcall DPLAppendToFile(int instanceID, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLAppendToFileA(int instanceID, char * FileName);
__declspec(dllimport) char* __stdcall DPLAppendToString(int instanceID, int AppendMode);
__declspec(dllimport) int __stdcall DPLApplyStyle(int instanceID, wchar_t * StyleName);
__declspec(dllimport) int __stdcall DPLApplyStyleA(int instanceID, char * StyleName);
__declspec(dllimport) int __stdcall DPLAttachAnnotToForm(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLBalanceContentStream(int instanceID);
__declspec(dllimport) int __stdcall DPLBalancePageTree(int instanceID, int Options);
__declspec(dllimport) int __stdcall DPLBeginPageUpdate(int instanceID);
__declspec(dllimport) int __stdcall DPLCapturePage(int instanceID, int Page);
__declspec(dllimport) int __stdcall DPLCapturePageEx(int instanceID, int Page, int Options);
__declspec(dllimport) int __stdcall DPLCharWidth(int instanceID, int CharCode);
__declspec(dllimport) int __stdcall DPLCheckFileCompliance(int instanceID, wchar_t * InputFileName, wchar_t * Password, int ComplianceTest, int Options);
__declspec(dllimport) int __stdcall DPLCheckFileComplianceA(int instanceID, char * InputFileName, char * Password, int ComplianceTest, int Options);
__declspec(dllimport) int __stdcall DPLCheckObjects(int instanceID);
__declspec(dllimport) int __stdcall DPLCheckPageAnnots(int instanceID);
__declspec(dllimport) int __stdcall DPLCheckPassword(int instanceID, wchar_t * Password);
__declspec(dllimport) int __stdcall DPLCheckPasswordA(int instanceID, char * Password);
__declspec(dllimport) int __stdcall DPLClearFileList(int instanceID, wchar_t * ListName);
__declspec(dllimport) int __stdcall DPLClearFileListA(int instanceID, char * ListName);
__declspec(dllimport) int __stdcall DPLClearImage(int instanceID, int ImageID);
__declspec(dllimport) int __stdcall DPLClearPageLabels(int instanceID);
__declspec(dllimport) int __stdcall DPLClearTextFormatting(int instanceID);
__declspec(dllimport) int __stdcall DPLCloneOutlineAction(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLClonePages(int instanceID, int StartPage, int EndPage, int RepeatCount);
__declspec(dllimport) int __stdcall DPLCloseOutline(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLClosePath(int instanceID);
__declspec(dllimport) int __stdcall DPLCombineContentStreams(int instanceID);
__declspec(dllimport) int __stdcall DPLCompareOutlines(int instanceID, int FirstOutlineID, int SecondOutlineID);
__declspec(dllimport) int __stdcall DPLCompressContent(int instanceID);
__declspec(dllimport) int __stdcall DPLCompressFonts(int instanceID, int Compress);
__declspec(dllimport) int __stdcall DPLCompressImages(int instanceID, int Compress);
__declspec(dllimport) int __stdcall DPLCompressPage(int instanceID);
__declspec(dllimport) int __stdcall DPLContentStreamCount(int instanceID);
__declspec(dllimport) int __stdcall DPLContentStreamSafe(int instanceID);
__declspec(dllimport) int __stdcall DPLCopyPageRanges(int instanceID, int DocumentID, wchar_t * RangeList);
__declspec(dllimport) int __stdcall DPLCopyPageRangesA(int instanceID, int DocumentID, char * RangeList);
__declspec(dllimport) int __stdcall DPLCopyPageRangesEx(int instanceID, int DocumentID, wchar_t * RangeList, int Options);
__declspec(dllimport) int __stdcall DPLCopyPageRangesExA(int instanceID, int DocumentID, char * RangeList, int Options);
__declspec(dllimport) char* __stdcall DPLCreateBuffer(int instanceID, int BufferLength);
__declspec(dllimport) int __stdcall DPLCreateLibrary();
__declspec(dllimport) int __stdcall DPLCreateNewObject(int instanceID);
__declspec(dllimport) int __stdcall DPLCreateTable(int instanceID, int RowCount, int ColumnCount);
__declspec(dllimport) int __stdcall DPLDAAppendFile(int instanceID, int FileHandle);
__declspec(dllimport) int __stdcall DPLDACapturePage(int instanceID, int FileHandle, int PageRef);
__declspec(dllimport) int __stdcall DPLDACapturePageEx(int instanceID, int FileHandle, int PageRef, int Options);
__declspec(dllimport) int __stdcall DPLDACloseFile(int instanceID, int FileHandle);
__declspec(dllimport) int __stdcall DPLDADrawCapturedPage(int instanceID, int FileHandle, int DACaptureID, int DestPageRef, double PntLeft, double PntBottom, double PntWidth, double PntHeight);
__declspec(dllimport) int __stdcall DPLDADrawRotatedCapturedPage(int instanceID, int FileHandle, int DACaptureID, int DestPageRef, double PntLeft, double PntBottom, double PntWidth, double PntHeight, double Angle);
__declspec(dllimport) int __stdcall DPLDAEmbedFileStreams(int instanceID, int FileHandle, wchar_t * RootPath);
__declspec(dllimport) int __stdcall DPLDAEmbedFileStreamsA(int instanceID, int FileHandle, char * RootPath);
__declspec(dllimport) wchar_t* __stdcall DPLDAExtractPageText(int instanceID, int FileHandle, int PageRef, int Options);
__declspec(dllimport) char* __stdcall DPLDAExtractPageTextA(int instanceID, int FileHandle, int PageRef, int Options);
__declspec(dllimport) int __stdcall DPLDAExtractPageTextBlocks(int instanceID, int FileHandle, int PageRef, int ExtractOptions);
__declspec(dllimport) int __stdcall DPLDAFindPage(int instanceID, int FileHandle, int Page);