PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

  ByVal dWidth As Double, ByVal dHeight As Double, ByVal iImageID As Long, _
  ByVal sTitle As String, ByVal sContents As String, ByVal dRed As Double, _
  ByVal dGreen As Double, ByVal dBlue As Double, ByVal iOptions As Long) As Long
Public Declare Function DPLAddStandardFont LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddStandardFont" ( _
  ByVal iInstanceID As Long, ByVal iStandardFontID As Long) As Long
Public Declare Function DPLAddSubsettedFont LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddSubsettedFontA" ( _
  ByVal iInstanceID As Long, ByVal sFontName As String, _
  ByVal iCharsetIndex As Long, ByVal sSubsetChars As String) As Long
Public Declare Function DPLAddTextMarkupAnnotation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddTextMarkupAnnotation" ( _
  ByVal iInstanceID As Long, ByVal iMarkupType As Long, ByVal dLeft As Double, _
  ByVal dTop As Double, ByVal dWidth As Double, ByVal dHeight As Double) As Long
Public Declare Function DPLAddToBuffer LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddToBuffer" ( _
  ByVal iInstanceID As Long, ByVal sBuffer As String, ByVal sSource As String, _
  ByVal iSourceLength As Long) As Long
Public Declare Function DPLAddToFileList LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddToFileListA" ( _
  ByVal iInstanceID As Long, ByVal sListName As String, _
  ByVal sFileName As String) As Long
Public Declare Function DPLAddTrueTypeFont LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddTrueTypeFontA" ( _
  ByVal iInstanceID As Long, ByVal sFontName As String, _
  ByVal iEmbed As Long) As Long
Public Declare Function DPLAddTrueTypeFontFromFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddTrueTypeFontFromFileA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String) As Long
Public Declare Function DPLAddTrueTypeSubsettedFont LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddTrueTypeSubsettedFontA" ( _
  ByVal iInstanceID As Long, ByVal sFontName As String, _
  ByVal sSubsetChars As String, ByVal iOptions As Long) As Long
Public Declare Function DPLAddType1Font LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddType1FontA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String) As Long
Public Declare Function DPLAddU3DAnnotationFromFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAddU3DAnnotationFromFileA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sFileName As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLAnalyseFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAnalyseFileA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String) As Long
Public Declare Function DPLAnnotationCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAnnotationCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLAnsiStringResultLength LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAnsiStringResultLength" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLAppendSpace LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAppendSpace" ( _
  ByVal iInstanceID As Long, ByVal dRelativeSpace As Double) As Long
Public Declare Function DPLAppendTableColumns LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAppendTableColumns" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long, _
  ByVal iNewColumnCount As Long) As Long
Public Declare Function DPLAppendTableRows LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAppendTableRows" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long, _
  ByVal iNewRowCount As Long) As Long
Public Declare Function DPLAppendText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAppendTextA" ( _
  ByVal iInstanceID As Long, ByVal sText As String) As Long
Public Declare Function DPLAppendToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAppendToFileA" ( _
  ByVal iInstanceID As Long, ByVal sFileName As String) As Long
Public Declare Function DPLAppendToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAppendToString" ( _
  ByVal iInstanceID As Long, ByVal iAppendMode As Long) As String
Public Declare Function DPLApplyStyle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLApplyStyleA" ( _
  ByVal iInstanceID As Long, ByVal sStyleName As String) As Long
Public Declare Function DPLAttachAnnotToForm LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLAttachAnnotToForm" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLBalanceContentStream LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLBalanceContentStream" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLBalancePageTree LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLBalancePageTree" ( _
  ByVal iInstanceID As Long, ByVal iOptions As Long) As Long
Public Declare Function DPLBeginPageUpdate LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLBeginPageUpdate" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCapturePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCapturePage" ( _
  ByVal iInstanceID As Long, ByVal iPage As Long) As Long
Public Declare Function DPLCapturePageEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCapturePageEx" ( _
  ByVal iInstanceID As Long, ByVal iPage As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLCharWidth LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCharWidth" ( _
  ByVal iInstanceID As Long, ByVal iCharCode As Long) As Long
Public Declare Function DPLCheckFileCompliance LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCheckFileComplianceA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String, ByVal iComplianceTest As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLCheckObjects LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCheckObjects" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCheckPageAnnots LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCheckPageAnnots" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCheckPassword LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCheckPasswordA" ( _
  ByVal iInstanceID As Long, ByVal sPassword As String) As Long
Public Declare Function DPLClearFileList LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLClearFileListA" ( _
  ByVal iInstanceID As Long, ByVal sListName As String) As Long
Public Declare Function DPLClearImage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLClearImage" ( _
  ByVal iInstanceID As Long, ByVal iImageID As Long) As Long
Public Declare Function DPLClearPageLabels LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLClearPageLabels" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLClearTextFormatting LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLClearTextFormatting" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCloneOutlineAction LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCloneOutlineAction" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLClonePages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLClonePages" ( _
  ByVal iInstanceID As Long, ByVal iStartPage As Long, ByVal iEndPage As Long, _
  ByVal iRepeatCount As Long) As Long
Public Declare Function DPLCloseOutline LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCloseOutline" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLClosePath LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLClosePath" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCombineContentStreams LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCombineContentStreams" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCompareOutlines LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCompareOutlines" ( _
  ByVal iInstanceID As Long, ByVal iFirstOutlineID As Long, _
  ByVal iSecondOutlineID As Long) As Long
Public Declare Function DPLCompressContent LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCompressContent" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCompressFonts LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCompressFonts" ( _
  ByVal iInstanceID As Long, ByVal iCompress As Long) As Long
Public Declare Function DPLCompressImages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCompressImages" ( _
  ByVal iInstanceID As Long, ByVal iCompress As Long) As Long
Public Declare Function DPLCompressPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCompressPage" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLContentStreamCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLContentStreamCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLContentStreamSafe LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLContentStreamSafe" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCopyPageRanges LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCopyPageRangesA" ( _
  ByVal iInstanceID As Long, ByVal iDocumentID As Long, _
  ByVal sRangeList As String) As Long
Public Declare Function DPLCopyPageRangesEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCopyPageRangesExA" ( _
  ByVal iInstanceID As Long, ByVal iDocumentID As Long, _
  ByVal sRangeList As String, ByVal iOptions As Long) As Long
Public Declare Function DPLCreateBuffer LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCreateBuffer" ( _
  ByVal iInstanceID As Long, ByVal iBufferLength As Long) As String
Public Declare Function DPLCreateLibrary LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCreateLibrary" () As Long
Public Declare Function DPLCreateNewObject LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCreateNewObject" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLCreateTable LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLCreateTable" ( _
  ByVal iInstanceID As Long, ByVal iRowCount As Long, _
  ByVal iColumnCount As Long) As Long
Public Declare Function DPLDAAppendFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAAppendFile" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDACapturePage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDACapturePage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iPageRef As Long) As Long
Public Declare Function DPLDACapturePageEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDACapturePageEx" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLDACloseFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDACloseFile" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long) As Long
Public Declare Function DPLDADrawCapturedPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDADrawCapturedPage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iDACaptureID As Long, ByVal iDestPageRef As Long, _
  ByVal dPntLeft As Double, ByVal dPntBottom As Double, _
  ByVal dPntWidth As Double, ByVal dPntHeight As Double) As Long
Public Declare Function DPLDADrawRotatedCapturedPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDADrawRotatedCapturedPage" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal iDACaptureID As Long, ByVal iDestPageRef As Long, _
  ByVal dPntLeft As Double, ByVal dPntBottom As Double, _
  ByVal dPntWidth As Double, ByVal dPntHeight As Double, _
  ByVal dAngle As Double) As Long
Public Declare Function DPLDAEmbedFileStreams LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAEmbedFileStreamsA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, _
  ByVal sRootPath As String) As Long
Public Declare Function DPLDAExtractPageText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAExtractPageTextA" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLDAExtractPageTextBlocks LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAExtractPageTextBlocks" ( _
  ByVal iInstanceID As Long, ByVal iFileHandle As Long, ByVal iPageRef As Long, _
  ByVal iExtractOptions As Long) As Long
Public Declare Function DPLDAFindPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDAFindPage" ( _
